--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,7 @@ Depends: R (>= 3.4.4)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Imports: shiny,
+    stringr,
+    dplyr,
+    reshape2
